feat: add custom exceptions and update UserController / ajout des exceptions personnalisées et mise à jour de UserController